...

    <string name="bookmark_confirmation_delete_movie_title">Delete Bookmarked Movie?</string>
    <string name="bookmark_confirmation_delete_tv_show_title">Delete Bookmarked Tv Show?</string>
    <string name="bookmark_confirmation_delete_description">Can\'t be retrieved once deleted</string>
    <string name="bookmark_confirmation_negative_button">Cancel</string>
    <string name="bookmark_confirmation_positive_button">Delete</string>
    <string name="bookmark_deleted">Bookmark deleted!</string>
    <string name="bookmark_deleted_undo">Undo</string>
    <string name="bookmark_deleted_undo_success">Undo success!</string>

    <string name="menu_sort_title">Title</string>
    <string name="menu_sort_rating">Rating</string>
</resources>
