<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bookmark.tvshow.presentation.fragment.BookmarkTvShowsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBookmarkTvShows"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_bookmark_tv_shows"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</androidx.constraintlayout.widget.ConstraintLayout>