...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivBookmarkTvShow"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstAirDate"
            tools:text="In a time when monsters walk the Earth, humanity’s fight for its future sets Godzilla and Kong on a collision course that will see the two most powerful forces of nature on the planet collide in a spectacular battle for the ages." />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDeleteBookmarkTvShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="?attr/selectableItemBackground"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintBottom_toBottomOf="@+id/cpiVoteAverage"
...
